# bash-cloud-forge

./: .env.example  .gitignore  LICENSE  README.md  bash-cloud-forge.logrotate  deploy.sh  forge.sh  index.html  main.py  provision.sh  pyproject.toml  requirements.txt  test-telegram.sh  vercel.json
.github/workflows/: bash-ci.yml  lint.yml
app/: app.py
app/static/: style.css
lib/: backup.sh  config.sh  dashboard.sh  deploy.sh  env_check.sh  logger.sh  monitor.sh  provision.sh  security.sh  telegram.sh  update.sh
scripts/deploy/: deploy-flask-api.sh
scripts/provision/: provision-do.sh
scripts/utils/: common.sh  setup-logs.sh
static/: index.html
