[project]
name = "bash-cloud-forge"
version = "0.1.0"
description = "Enterprise Bash provisioning engine"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "sqlalchemy",
    "psycopg2-binary",
    "python-dotenv",
    "supabase"
]

[tool.uv]
managed = true
